src/core-crm/objects/Study_Area__c/Study_Area__c.object-meta.xml
<CustomObject>
    <label>Study Area</label>
    <nameField>
        <label>Study Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>