src/core-crm/objects/Study_Area__c/fields/Study_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Study_Area_Code__c</fullName>
    <description>The Study Area code as used by SAMS.</description>
    <label>Study Area Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>