src/core-crm/objects/Study_Area__c/fields/Study_Area_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Study_Area_End_Date__c</fullName>
    <description>The end date of the Study Area being  offered</description>
    <label>Study Area End Date</label>
    <type>Date</type>
</CustomField>