src/core-crm/objects/Study_Area__c/fields/Study_Area_Long_Name__c.field-meta.xml
<CustomField>
    <fullName>Study_Area_Long_Name__c</fullName>
    <description>Study Area full title from SAMS.</description>
    <label>Study Area Long Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>