src/core-crm/objects/Study_Area__c/fields/Study_Area_No__c.field-meta.xml
<CustomField>
    <fullName>Study_Area_No__c</fullName>
    <description>This is SAMS Study Package Number. Enabling integration to keep Study Area reference lists in sync with SAMS.</description>
    <label>Study Area Number</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>