src/core-crm/objects/Study_Area__c/fields/Study_Area_Stage__c.field-meta.xml
<CustomField>
    <fullName>Study_Area_Stage__c</fullName>
    <description>Indicates the Study Area lifecycle stage.</description>
    <label>Study Area Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Discontinued</fullName>
            </value>
            <value>
                <fullName>Not entered</fullName>
            </value>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Phasing Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>