src/core-crm/objects/Study_Area__c/fields/Study_Area_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Study_Area_Start_Date__c</fullName>
    <description>The effective date of the Study Area being approved to be offered</description>
    <label>Study Area Start Date</label>
    <type>Date</type>
</CustomField>