src/core-crm/objects/Study_Area__c/fields/Study_Area_Type__c.field-meta.xml
<CustomField>
    <fullName>Study_Area_Type__c</fullName>
    <description>The description of the type of Study Area defined in SAMS.</description>
    <label>Study Area Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Undergraduate Major</fullName>
            </value>
            <value>
                <fullName>Postgraduate Major</fullName>
            </value>
            <value>
                <fullName>Study Area A Unit Sets (Historical Only)</fullName>
            </value>
            <value>
                <fullName>Undergraduate Second Major</fullName>
            </value>
            <value>
                <fullName>Postgraduate Second Major</fullName>
            </value>
            <value>
                <fullName>Undergraduate Minor</fullName>
            </value>
            <value>
                <fullName>Postgraduate Minor</fullName>
            </value>
            <value>
                <fullName>UG Study Area Extension</fullName>
            </value>
            <value>
                <fullName>PG Study Area Extension</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>