src/core-crm/objects/Study_Area__c/fields/Study_Area_Version__c.field-meta.xml
<CustomField>
    <fullName>Study_Area_Version__c</fullName>
    <description>This corresponds to SAMS Study Package Version Number. Enabling integration to keep Study Area reference lists in sync with SAMS.</description>
    <label>Study Area Version</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>